<resources>
    <string name="app_name">TinhDiemTHPT</string>
    <string name="menu_trang_chu">Trang chủ</string>
    <string name="menu_tong_quan">Tổng quan</string>
    <string name="menu_diem_du_kien">Điểm dự kiến</string>
    <string name="menu_thoi_khoa_bieu">Thời khóa biểu</string>
    <string name="menu_bieu_do">Biểu đồ, thống kê</string>
    <string name="menu_document">Tài liệu</string>
    <string name="menu_cai_dat">Cài đặt</string>
    <string name="st_chi_tiet">Chi tiết</string>

    <string name="str_class_name">Lớp:&#160;</string>
    <string name="str_semester">Học kì: &#160; </string>
    <string name="str_update_success">Cập nhật thông tin thành công!</string>
    <string name="str_update_notsuccess">Cập nhật thông tin không thành công!</string>
    <string name="str_update_null">Bạn phải nhập dữ liệu!</string>
    <string name="str_class">LỚP</string>
    <string name="str_text_semester">HỌC KÌ</string>
    <string name="str_text_diemcacmon">Điểm các môn</string>

    <string name="str_text_diemheso1">Điểm hệ số 1</string>
    <string name="str_text_diemheso2">Điểm hệ số 2</string>
    <string name="str_text_diemheso3">Điểm hệ số 3</string>
    <string name="str_text_edit_name">Sửa tên môn học</string>

    <string name="str_export_scheduletable">Thời khóa biểu sẽ được sao lưu vào thư mục <b>TinhDiemTHPT</b> </string>
    <string name="str_export_inputname">Nhập vào tên file:</string>
    <string name="str_export_scheduletable_title">Sao lưu thời khóa biểu</string>
    <string name="str_import_warning">Việc import dữ liệu nãy sẽ xóa hết tất cả dữ liệu thời khóa biểu hiện tại, bạn có muốn tiếp tục?</string>



</resources>
