<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_medium"
        android:paddingBottom="@dimen/margin_medium"
        android:paddingTop="@dimen/margin_medium">
        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:text="@string/str_export_scheduletable_title"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size_small"
            android:gravity="center|left"
            android:padding="@dimen/margin_small"
            android:textStyle="bold" />
        <TextView
            android:paddingLeft="@dimen/margin_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_export_scheduletable"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/color_text"/>
        <TextView
            android:paddingLeft="@dimen/margin_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_export_inputname"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/color_text"/>
        <EditText
            android:layout_width="match_parent"
            android:id="@+id/edt_name_file"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/color_text"
            android:padding="@dimen/margin_small"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginTop="@dimen/margin_medium"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_exit"
                android:padding="@dimen/margin_medium"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="center"
                android:text="HỦY"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="100dp"
                android:padding="@dimen/margin_medium"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="ĐỒNG Ý"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold" />


        </LinearLayout>
    </LinearLayout>

</LinearLayout>