<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/margin_medium"
    android:layout_marginRight="@dimen/margin_medium"
    tools:context="com.android.a14n12.tinhdiemthpt.Fragments.TrangChuFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/margin_small">

            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_class"
                    android:textColor="@color/color_text" />

                <TextView
                    android:id="@+id/tv_class"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:gravity="center"
                android:layout_weight="2">
                <TextView
                    android:id="@+id/tv_diem_tb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_centerInParent="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="5.00"
                    android:textColor="@android:color/holo_red_light"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_result"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_text_semester"
                    android:textColor="@color/color_text" />

                <TextView
                    android:id="@+id/tv_semester"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="2"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_text_diemcacmon"
            android:layout_margin="@dimen/margin_small"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_medium"/>

        <GridView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lv_tong_quan"
            android:numColumns="2"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_add_black_24dp"
            android:backgroundTint="@color/colorPrimary"
            app:borderWidth="0dp"
            app:elevation="6dp"
            app:fabSize="auto"
            android:layout_marginBottom="16dp" />
    </RelativeLayout>

</RelativeLayout>
